--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ COBMAKER transforms traditionally tedious COBOL education into an engaging, inte
                                     <ul style="list-style: none;">
                                         <li>
                                             <br>
-                                            <img class="img-fluid" src="assets/images/demo/COBMAKER_ui.png" alt="screenshot" width="1200" height="1600"/>
+                                            <img class="img-fluid" src="assets/images/demo/ui.png" alt="screenshot" width="1200" height="1600"/>
                                             <br><br>
                                         </li>
                                         
